--- a/templates/contact.html.twig
+++ b/templates/contact.html.twig
@@ -66,6 +66,12 @@
                             {{ form_widget(form.content) }}
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="form-group offset-4 col-5">
+                            {{ form_widget(form.captchaCode) }}
+                        </div>
+                    </div>
+
                     <div class="row d-flex justify-content-around">
                         <button type="submit">Envoyer</button>
                     </div>
