--- a/templates/contact.html.twig
+++ b/templates/contact.html.twig
@@ -30,47 +30,45 @@
 
         <div class="row">
             <div class="col-12">
-                <div>
-                    <h4>Vous souhaitez nous contacter?</h4>
+                {% for message in app.flashes('notice') %}
+                    <div class="flash-notice">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+                {{ form_start(form) }}
+                <div class="form-row d-flex justify-content-around">
+                    <div class="col-12 col-md-11">
+                        <h4>Vous souhaitez nous contacter ?</h4>
+                    </div>
+                    <div class="form-group col-sm-12 col-md-5">
+                        {{ form_widget(form.firstname) }}
+                    </div>
+                    <div class="form-group col-sm-12 col-md-5">
+                        {{ form_widget(form.lastname) }}
+                    </div>
                 </div>
-                <div>
-                    {% for message in app.flashes('notice') %}
-                        <div class="flash-notice">
-                            {{ message }}
-                        </div>
-                    {% endfor %}
-                    {{ form_start(form) }}
-
-                    <div class="form-row d-flex justify-content-around">
-                        <div class="form-group col-sm-12 col-md-5">
-                            {{ form_widget(form.firstname) }}
-                        </div>
-                        <div class="form-group col-sm-12 col-md-5">
-                            {{ form_widget(form.lastname) }}
-                        </div>
+                <div class="form-row d-flex justify-content-around">
+                    <div class="form-group col-sm-12 col-md-5">
+                        {{ form_widget(form.email) }}
                     </div>
-                    <div class="form-row d-flex justify-content-around">
-                        <div class="form-group col-sm-12 col-md-5">
-                            {{ form_widget(form.email) }}
-                        </div>
-                        <div class="form-group col-sm-12 col-md-5">
-                            {{ form_widget(form.phoneNumber) }}
-                        </div>
+                    <div class="form-group col-sm-12 col-md-5">
+                        {{ form_widget(form.phoneNumber) }}
                     </div>
-                    <div class="row d-flex justify-content-around">
-                        <div class="form-group col-sm-12 col-md-5">
-                            {{ form_widget(form.title) }}
-                        </div>
-                        <div class="form-group col-md-5 col-md-5"></div>
-                        <div class="form-group col-sm-12 col-md-11">
-                            {{ form_widget(form.content) }}
-                        </div>
-                    </div>
-                    <div class="row d-flex justify-content-around">
-                        <button type="submit">Envoyer</button>
-                    </div>
-                    {{ form_end(form) }}
                 </div>
+                <div class="row col-12 col-md-11 p-0 p-md-3">
+                    <div class="form-group col-12 col-md-5 ml-md-2 p-0 p-md-3">
+                        {{ form_widget(form.title) }}
+                    </div>
+                </div>
+                <div class="row d-flex justify-content-around">
+                    <div class="form-group col-sm-12 col-md-11 p-0">
+                        {{ form_widget(form.content) }}
+                    </div>
+                </div>
+                <div class="row d-flex justify-content-around">
+                    <button type="submit">Envoyer</button>
+                </div>
+                {{ form_end(form) }}
             </div>
         </div>
     </div>
