--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -20,7 +20,7 @@
                         <h2>L'agence web au coeur de vos besoins</h2>
                     </div>
                     <div class="row">
-                        <p class="envaleur">L’agence est spécialisée dans la réalisation de projets en transformation digitale. Elle accompagne les petites structures et les indépendants dans leur projet de stratégie en présence en ligne et d’optimisation de leurs existants. Cocorico digital conçoit des outils dernières générations et exclusivement développés en France.</p>
+                        <p class="envaleur">Notre agence, spécialisée dans la réalisation de projets et transformation digitale, est là pour vous accompagner. Notre but est de mettre en place une stratégie adaptée à chacun afin d’améliorer et optimiser sa présence en ligne. Cocorico Digital conçoit des outils dernières générations et exclusivement développés en France.</p>
                     </div>
                     <div class="row justify-content-around">
                         <a href="{{ 'contact' }}">
@@ -140,11 +140,11 @@
                     <a href={{ 'project/project_lenormant' }} class="link1">Voir le projet</a>
                 </div>
                 <div class="col-lg-4 no-padding shadow-sm p-0 mb-0 bg-white rounded white d-none d-lg-block">
-                    <img src="{{ asset('images/home/projet2.jpg') }}" class="img-fluid" alt="">
-                    <p>Type de projet</p>
-                    <h6>Titre h6</h6>
-                    <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
-                    <a href="#" class="link1">Voir le projet</a>
+                    <img src="{{ asset('images/home/liberer-delivrer-hypnose.jpg') }}" class="img-fluid" alt="">
+                    <p>Création site</p>
+                    <h6>Libérer Délivrer Hypnose</h6>
+                    <p>L'aventure de Christophaine Idrissi, l'aternative par l'hypnose</p>
+                    <a href="{{ 'project/project_liberer-delivrer-hypnose' }}" class="link1">Voir le projet</a>
                 </div>
                 <div class="col-lg-4 no-padding shadow-sm p-0 mb-0 bg-white rounded white d-none d-lg-block">
                     <img src="{{ asset('images/home/projet3.jpg') }}" class="img-fluid" alt="">
