--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -77,7 +77,7 @@
                     <h4>Nos clients</h4>
                 </div>
                 <!-- Carousel -->
-                <div id="myCarousel" class="carousel slide col-12 margin-auto" data-ride="carousel">
+                <div id="myCarousel" class="carousel slide col-12 d-flex justify-content-center" data-ride="carousel">
 
                     <!-- Indicators -->
                     <ul class="carousel-indicators">
@@ -87,23 +87,23 @@
                     </ul>
 
                     <!-- The slideshow -->
-                    <div class="carousel-inner">
+                    <div class="carousel-inner" style=" width:320px">
                         <div class="carousel-item active">
                             <div class="col-12 no-padding shadow-sm p-0 mb-0 bg-white rounded white">
-                                <img src="{{ asset('images/home/projet1.jpg') }}" class="img-fluid" alt="" height="180" width="320">
-                                <p>Type de projet</p>
-                                <h6>Titre h6</h6>
-                                <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
-                                <a href="#" class="link1">Voir le projet</a>
+                                <img src="{{ asset('images/home/lenormant_home.jpg') }}" class="img-fluid" alt="">
+                                <p>Création site</p>
+                                <h6>Groupe Lenormant</h6>
+                                <p>Nous avons participé à la visibilité digital d'un groupe familiale</p>
+                                <a href={{ 'project/project_lenormant' }} class="link1">Voir le projet</a>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div class="col-12 no-padding shadow-sm p-0 mb-0 bg-white rounded white">
-                                <img src="{{ asset('images/home/projet2.jpg') }}" class="img-fluid" alt="" height="180" width="320">
-                                <p>Type de projet</p>
-                                <h6>Titre h6</h6>
-                                <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
-                                <a href="#" class="link1">Voir le projet</a>
+                                <img src="{{ asset('images/home/liberer-delivrer-hypnose.jpg') }}" class="img-fluid" alt="">
+                                <p>Création site</p>
+                                <h6>Libérer Délivrer Hypnose</h6>
+                                <p>L'aventure de Christophaine Idrissi, l'aternative par l'hypnose</p>
+                                <a href="{{ 'project/project_liberer-delivrer-hypnose' }}" class="link1">Voir le projet</a>
                             </div>
                         </div>
                         <div class="carousel-item">
@@ -115,16 +115,14 @@
                                 <a href="#" class="link1">Voir le projet</a>
                             </div>
                         </div>
+                        <!-- Left and right controls -->
+                        <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
+                            <span class="carousel-control-prev-icon"></span>
+                        </a>
+                        <a class="carousel-control-next" href="#myCarousel" data-slide="next">
+                            <span class="carousel-control-next-icon"></span>
+                        </a>
                     </div>
-
-                    <!-- Left and right controls -->
-                    <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
-                        <span class="carousel-control-prev-icon"></span>
-                    </a>
-                    <a class="carousel-control-next" href="#myCarousel" data-slide="next">
-                        <span class="carousel-control-next-icon"></span>
-                    </a>
-
                 </div>
             </div>
 
