--- a/templates/projects/project_lenormant.html.twig
+++ b/templates/projects/project_lenormant.html.twig
@@ -21,7 +21,7 @@
                 <div class="col-lg-5 col-12 ">
                     <h4>L'équipe en charge</h4>
                     <div class="d-inline-block p-2">
-                        <img src="{{ asset('images/home-intro.jpg') }}" alt="Bootstrap" class="img-fluid ronde">
+                        <img src="{{ asset('images/equipe/benoit.jpg') }}" alt="Bootstrap" class="img-fluid ronde">
                     </div>
                     <div class="d-inline-block p-2">
                         <p>Benoit</p>
