--- a/templates/admin/include_admin_articles.html.twig
+++ b/templates/admin/include_admin_articles.html.twig
@@ -12,7 +12,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12 col-lg-12 content_article">
-                    <p>{{ article.content|slice(0, 300) ~ '...'  }}</p>
+                    <p>{{ article.content|striptags|slice(0, 300)|raw }}...</p>
                 </div>
             </div>
             <div class="row d-flex justify-content-end ">
