--- a/templates/catalog.html.twig
+++ b/templates/catalog.html.twig
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="row d-flex justify-content-around">
-            <div class="col-sm-12 col-md-4 col-lg-4">
+            <div class="col-sm-12 col-md-4 col-lg-4 mb-2">
                 <div class="col-md-12 col-lg-12 white pack img-round">
                     <div class="col-md-12 col-lg-12 center">
                         <h1>Basic</h1>
@@ -69,7 +69,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-12 col-md-4 col-lg-4">
+            <div class="col-sm-12 col-md-4 col-lg-4 mb-2">
                 <div class="col-md-12 col-lg-12 white pack img-round">
                     <div class="col-md-12 col-lg-12 center">
                         <h1>Premium</h1>
