--- a/templates/references.html.twig
+++ b/templates/references.html.twig
@@ -38,11 +38,11 @@
                     <a href={{ 'project/project_lenormant' }} class="link1">Voir le projet</a>
                 </div>
                 <div class="col-lg-5 col-md-5 col-sm-7 col-10 no-padding shadow-sm p-0 mb-0 bg-white rounded white block-decal thumbnail">
-                    <img src="{{ asset('images/home/projet2.jpg') }}" class="img-fluid" alt="" height="180" width="100%">
-                    <p>Type de projet</p>
-                    <h6>Titre h6</h6>
-                    <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
-                    <a href="#" class="link1">Voir le projet</a>
+                    <img src="{{ asset('images/home/liberer-delivrer-hypnose.jpg') }}" class="img-fluid" alt="" height="180" width="100%">
+                    <p>Création site</p>
+                    <h6>Libérer Délivrer Hypnose</h6>
+                    <p>L'aventure de Christophaine Idrissi, l'aternative par l'hypnose</p>
+                    <a href="{{ 'project/project_liberer-delivrer-hypnose' }}" class="link1">Voir le projet</a>
                 </div>
                 <div class="col-lg-5 col-md-5 col-sm-7 col-10 no-padding shadow-sm p-0 mb-0 bg-white rounded white block-decal">
                     <img src="{{ asset('images/home/projet3.jpg') }}" class="img-fluid" alt="" height="180" width="100%">
