fix spelling mistakes on project Naima

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -141,7 +141,7 @@
                     <img src="{{ asset('images/home/liberer-delivrer-hypnose.jpg') }}" class="img-fluid" alt="">
                     <p>Création site</p>
                     <h6>Libérer Délivrer Hypnose</h6>
-                    <p>L'aventure de Christophaine Idrissi, l'aternative par l'hypnose</p>
+                    <p>L'aventure de Christophaine Idrissi, l'alternative par l'hypnose</p>
                     <a href="{{ 'project/project_liberer-delivrer-hypnose' }}" class="link1">Voir le projet</a>
                 </div>
                 <div class="col-lg-4 no-padding shadow-sm p-0 mb-0 bg-white rounded white d-none d-lg-block">
