--- a/templates/references.html.twig
+++ b/templates/references.html.twig
@@ -41,7 +41,7 @@
                     <img src="{{ asset('images/home/liberer-delivrer-hypnose.jpg') }}" class="img-fluid" alt="" height="180" width="100%">
                     <p>Création site</p>
                     <h6>Libérer Délivrer Hypnose</h6>
-                    <p>L'aventure de Christophaine Idrissi, l'aternative par l'hypnose</p>
+                    <p>L'aventure de Christophaine Idrissi, l'alternative par l'hypnose</p>
                     <a href="{{ 'project/project_liberer-delivrer-hypnose' }}" class="link1">Voir le projet</a>
                 </div>
                 <div class="col-lg-5 col-md-5 col-sm-7 col-10 no-padding shadow-sm p-0 mb-0 bg-white rounded white block-decal">
