add team picture naima and benoit on page a propos

--- a/templates/propos.html.twig
+++ b/templates/propos.html.twig
@@ -52,7 +52,7 @@
                 </div>
                 <div class="row space justify-content-left">
                     <div class="col-7 col-sm-7 col-md-7 col-lg-4 text-right pr-0">
-                        <img src="{{ asset('images/home-intro.jpg') }}" alt="Bootstrap" class="img-fluid ronde">
+                        <img src="{{ asset('images/equipe/benoit.jpg') }}" alt="Bootstrap" class="img-fluid ronde">
                     </div>
                     <div class="col-4">
                         <p>Benoit</p>
@@ -61,7 +61,7 @@
                 </div>
                 <div class="row space justify-content-left">
                     <div class="col-7 col-sm-7 col-md-7 col-lg-4 text-right pr-0">
-                        <img src="{{ asset('images/home-intro.jpg') }}" alt="Bootstrap" class="img-fluid  ronde">
+                        <img src="{{ asset('images/equipe/naima.jpg') }}" alt="Bootstrap" class="img-fluid  ronde">
                     </div>
                     <div class="col-4">
                         <p>Naïma</p>
