add Noemie projects

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -145,11 +145,11 @@
                     <a href="{{ 'project/project_liberer-delivrer-hypnose' }}" class="link1">Voir le projet</a>
                 </div>
                 <div class="col-lg-4 no-padding shadow-sm p-0 mb-0 bg-white rounded white d-none d-lg-block">
-                    <img src="{{ asset('images/home/projet3.jpg') }}" class="img-fluid" alt="">
-                    <p>Type de projet</p>
-                    <h6>Titre h6</h6>
-                    <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
-                    <a href="#" class="link1">Voir le projet</a>
+                    <img src="{{ asset('images/home/projet2.jpg') }}" class="img-fluid" alt="">
+                    <p>Création site</p>
+                    <h6>Elektropop</h6>
+                    <p>Pour sa première édition, le festival Elektropop voit grand !</p>
+                    <a href="{{ 'project/project_elektropop' }}" class="link1">Voir le projet</a>
                 </div>
             </div>
             <div class="row col-12 col-lg-12 justify-content-around margin-auto">
