--- a/templates/references.html.twig
+++ b/templates/references.html.twig
@@ -45,18 +45,18 @@
                     <a href="{{ 'project/project_liberer-delivrer-hypnose' }}" class="link1">Voir le projet</a>
                 </div>
                 <div class="col-lg-5 col-md-5 col-sm-7 col-10 no-padding shadow-sm p-0 mb-0 bg-white rounded white block-decal">
-                    <img src="{{ asset('images/home/projet3.jpg') }}" class="img-fluid" alt="" height="180" width="100%">
-                    <p>Type de projet</p>
-                    <h6>Titre h6</h6>
-                    <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
-                    <a href="#" class="link1">Voir le projet</a>
+                    <img src="{{ asset('images/home/projet2.jpg') }}" class="img-fluid" alt="" height="180" width="100%">
+                    <p>Création site</p>
+                    <h6>Elektropop</h6>
+                    <p>Pour sa première édition, le festival Elektropop voit grand !</p>
+                    <a href="{{ 'project/project_elektropop' }}" class="link1">Voir le projet</a>
                 </div>
                 <div class="col-lg-5 col-md-5 col-sm-7 col-10 no-padding shadow-sm p-0 mb-0 bg-white rounded white block-decal">
-                    <img src="{{ asset('images/home/projet3.jpg') }}" class="img-fluid" alt="" height="180" width="100%">
-                    <p>Type de projet</p>
-                    <h6>Titre h6</h6>
-                    <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
-                    <a href="#" class="link1">Voir le projet</a>
+                    <img src="{{ asset('images/home/projet2.jpg') }}" class="img-fluid" alt="" height="180" width="100%">
+                    <p>Création site</p>
+                    <h6>Marc et Clara</h6>
+                    <p>Un couple qui souhaite bousculer l'éducation secondaire !</p>
+                    <a href="{{ 'project/project_marc-clara' }}" class="link1">Voir le projet</a>
                 </div>
             </div>
         </div>
