--- a/templates/projects/project_jean-forteroche.html.twig
+++ b/templates/projects/project_jean-forteroche.html.twig
@@ -1,5 +1,5 @@
 {% extends "base.html.twig" %}
-{% block title %}Projet Marc et Clara{% endblock %}
+{% block title %}Projet Jean Forteroche{% endblock %}
 {% block stylesheets %}
 
 {% endblock %}
@@ -10,13 +10,10 @@
         </div>
         <div class="row offset-lg-1 col-10 title_article">
             <div class="col-lg-12">
-                <h1>Marc et Clara</h1>
+                <h1>Jean Forteroche</h1>
             </div>
             <div class="col-lg-12">
-                <h2>
-                    Marc et Clara sont jeunes et plein d’ambition. Ils souhaitent ouvrir un lycée à méthodologie Montessori avec comme ambition de bousculer l’éducation secondaire.
-                    Bienvenue donc au Lycée Hors des Murs !
-                </h2>
+                <h2>Un écrivain qui souhaite partager sa passion du voyage !</h2>
             </div>
         </div>
         <div class="offset-lg-1 col-lg-10 col-12">
@@ -24,29 +21,22 @@
                 <div class="col-lg-5 col-12 ">
                     <h4>L'équipe en charge</h4>
                     <div class="d-inline-block p-2">
-                        <img src="{{ asset('images/home-intro.jpg') }}" alt="Bootstrap" class="img-fluid ronde">
+                        <img src="{{ asset('images/equipe/benoit.jpg') }}" alt="Bootstrap" class="img-fluid ronde">
                     </div>
                     <div class="d-inline-block p-2">
-                        <p>Noémi</p>
-                        <p>UX / UI Designer</p>
+                        <p>Benoit</p>
+                        <p>Développeur Full-stack</p>
                     </div>
                 </div>
                 <div class="col-12 col-lg-6 mt-5 mt-lg-0">
                     <div class="col-12 text-justify">
                         <h4>Livrables et autres</h4>
-                        <p>
-                            Pour cela, il nous faut créer et trouver une identité forte et représentative de l’état d’esprit des clients : un slogan, un nom de lycée, un logo et une charte graphique.
-                            Les clients ont aussi besoin d’une plateforme digitale (responsive) qui permettrait la gestion de la vie scolaire tout en étant simple et efficace avec un back-office pour les professeurs et les propriétaires.
-
-                        </p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
                     </div>
                     <div class="col-12 mt-5 text-justify">
                         <h4>Objectif du projet</h4>
-                        <p>
-                            L’objectif de Clara et Marc est simple : ouvrir un lycée Montessori dans la région Aquitaine avec un concept éducatif alternatif pour révolutionner la pédagogie secondaire.
-                            Afin de réaliser cela, nous devons faire face à une concurrence grandissante bien que le secondaire soit encore peu touché par cette méthodologie.
-                        </p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
                     </div>
                 </div>
@@ -58,17 +48,17 @@
                 <div class="carousel-inner" style=" width:320px" >
                     <div class="carousel-item active">
                         <div class="col-12 no-padding shadow-sm p-0 mb-0 bg-white rounded white">
-                            <img src="{{ asset('images/article-fili-990.jpg') }}" class="img-fluid" alt="" height="180" width="320">
+                            <a href="http://projet3.bl-openclassroom.fr/index.php"><img src="{{ asset('images/projects/jean-forteroche/jean-forteroche_1.jpg') }}" class="img-fluid" alt="" height="180" width="320"></a>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="col-12 no-padding shadow-sm p-0 mb-0 bg-white rounded white">
-                            <img src="{{ asset('images/article-fili-990.jpg') }}" class="img-fluid" alt="" height="180" width="320">
+                            <a href="http://projet3.bl-openclassroom.fr/index.php?action=pageArticles&controller=Controller&id=1"><img src="{{ asset('images/projects/jean-forteroche/jean-forteroche_2.jpg') }}" class="img-fluid" alt="" height="180" width="320"></a>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="col-12 no-padding shadow-sm p-0 mb-0 bg-white rounded white">
-                           <img src="{{ asset('images/article-fili-990.jpg') }}" class="img-fluid" alt="" height="180" width="320">
+                            <a href="http://projet3.bl-openclassroom.fr/index.php"><img src="{{ asset('images/projects/jean-forteroche/jean-forteroche_3.jpg') }}" class="img-fluid" alt="" height="180" width="320"></a>
                         </div>
                     </div>
 
@@ -94,14 +84,14 @@
                 <div class="row d-flex justify-content-between">
                     <div class="col-lg-4 p-0">
                         <div class="col-12 mb-3 p-0">
-                           <img src="{{ asset('images/article-fili-990.jpg') }}" class="img-fluid" alt="">
+                            <a href="http://projet3.bl-openclassroom.fr/index.php?action=pageArticles&controller=Controller&id=1"><img src="{{ asset('images/projects/jean-forteroche/jean-forteroche_2.jpg') }}" class="img-fluid" alt=""></a>
                         </div>
                         <div class="col-12 p-0">
-                            <img src="{{ asset('images/article-fili-990.jpg') }}" class="img-fluid" alt="">
+                            <a href="http://projet3.bl-openclassroom.fr/index.php?action=connexion&controller=Controller"><img src="{{ asset('images/projects/jean-forteroche/jean-forteroche_3.jpg') }}" class="img-fluid" alt=""></a>
                         </div>
                     </div>
                     <div class="col-lg-8">
-                        <img src="{{ asset('images/article-fili-990.jpg') }}" class="img-fluid" alt="">
+                        <a href="http://projet3.bl-openclassroom.fr/index.php"><img src="{{ asset('images/projects/jean-forteroche/jean-forteroche_1.jpg') }}" class="img-fluid" alt=""></a>
                     </div>
                 </div>
             </div>
