--- a/templates/references.html.twig
+++ b/templates/references.html.twig
@@ -58,6 +58,21 @@
                     <p>Un couple qui souhaite bousculer l'éducation secondaire !</p>
                     <a href="{{ 'project/project_marc-clara' }}" class="link1">Voir le projet</a>
                 </div>
+                <div class="col-lg-5 col-md-5 col-sm-7 col-10 no-padding shadow-sm p-0 mb-0 bg-white rounded white block-decal">
+                    <img src="{{ asset('images/home/jean-forteroche.jpg') }}" class="img-fluid" alt="" height="180" width="100%">
+                    <p>Refonte site</p>
+                    <h6>Jean Forteroche</h6>
+                    <p>Un écrivain qui souhaite partager sa passion du voyage !</p>
+                    <a href="{{ 'project/project_jean-forteroche' }}" class="link1">Voir le projet</a>
+                </div>
+                <div class="col-lg-5 col-md-5 col-sm-7 col-10 no-padding shadow-sm p-0 mb-0 bg-white rounded white block-decal">
+                    <img src="{{ asset('images/home/projet3.jpg') }}" class="img-fluid" alt="" height="180" width="100%">
+                    <p>Refonte site</p>
+                    <h6>projet</h6>
+                    <p>Lorem lorem lorem lorem lorem lorem lorem</p>
+                    <a href="{{ 'project/' }}" class="link1">Voir le projet</a>
+                </div>
+
             </div>
         </div>
     </div>
