replace lorem to project Benoit update

--- a/templates/projects/project_jean-forteroche.html.twig
+++ b/templates/projects/project_jean-forteroche.html.twig
@@ -31,13 +31,15 @@
                 <div class="col-12 col-lg-6 mt-5 mt-lg-0">
                     <div class="col-12 text-justify">
                         <h4>Livrables et autres</h4>
-                        <p>
+                        <p class="envaleur">
                             Création d'un blog offrant les possibilités suivantes :
-                            - Rédiger et diffuser en toute autonomie des articles de blog
-                            - Page de contact, pour lui envoyé un message
-                            - Une page de connexion pour les visiteurs
-                            - la possibilité aux visiteurs de poster un message sur un article
                         </p>
+                        <ul class="envaleur">
+                            <li>Rédiger et diffuser en toute autonomie des articles de blog</li>
+                            <li>Page de contact, pour lui envoyé un message</li>
+                            <li>Une page de connexion pour les visiteurs</li>
+                            <li>la possibilité aux visiteurs de poster un message sur un article</li>
+                        </ul>
                     </div>
                     <div class="col-12 mt-5 text-justify">
                         <h4>Objectif du projet</h4>
