replace lorem to project Benoit envaleur text

--- a/templates/projects/project_jean-forteroche.html.twig
+++ b/templates/projects/project_jean-forteroche.html.twig
@@ -43,7 +43,7 @@
                     </div>
                     <div class="col-12 mt-5 text-justify">
                         <h4>Objectif du projet</h4>
-                        <p>
+                        <p class="envaleur">
                             Jean Forteroche est un écrivain qui voyage aux quatre coins du globe et partage sa passion dans des petites nouvelles regroupées dans un roman.
                             Voulant accroitre son rayonnement à la toile, il nous à charger de lui confectionner un site simple et clair pour partager à toute heure.
                         </p>
