add link to reference in homepage

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -153,7 +153,7 @@
                 </div>
             </div>
             <div class="row col-12 col-lg-12 justify-content-around margin-auto">
-                <a href="#">
+                <a href="{{ 'references' }}">
                     <button>Projets réalisés</button>
                 </a>
             </div>
