--- a/templates/catalog.html.twig
+++ b/templates/catalog.html.twig
@@ -79,7 +79,7 @@
                         <div class="col-md-12 col-lg-12">
                             <table>
                                 <tr>
-                                    <td>- 12 thèmes au choix</td>
+                                    <td>- 12 modèles au choix</td>
                                 </tr>
                                 <tr>
                                     <td>- 6 pages incluses </td>
