add picture Noemie and change owner project

--- a/templates/projects/project_elektropop.html.twig
+++ b/templates/projects/project_elektropop.html.twig
@@ -24,7 +24,7 @@
                 <div class="col-lg-5 col-12 ">
                     <h4>L'équipe en charge</h4>
                     <div class="d-inline-block p-2">
-                        <img src="{{ asset('images/home-intro.jpg') }}" alt="Bootstrap" class="img-fluid ronde">
+                        <img src="{{ asset('images/equipe/noemie.jpg') }}" alt="Bootstrap" class="img-fluid ronde">
                     </div>
                     <div class="d-inline-block p-2">
                         <p>Noémi</p>
