--- a/templates/projects/project_marc-clara.html.twig
+++ b/templates/projects/project_marc-clara.html.twig
@@ -27,7 +27,7 @@
                         <img src="{{ asset('images/home-intro.jpg') }}" alt="Bootstrap" class="img-fluid ronde">
                     </div>
                     <div class="d-inline-block p-2">
-                        <p>Noémi</p>
+                        <p>Ronan</p>
                         <p>UX / UI Designer</p>
                     </div>
                 </div>
