--- a/templates/contact.html.twig
+++ b/templates/contact.html.twig
@@ -19,7 +19,9 @@
                         <h2>Contactez la team Cocorico Digital !</h2>
                     </div>
                     <div class="row">
-                        <p class="envaleur">Vous avez besoin d’une information, une question à nous poser ou vous souhaitez juste nous laisser un petit mot doux ? Pas de problème, on se lève au chant du coq pour traiter au plus vite votre demande !</p>
+                        <p class="envaleur">Vous avez besoin d’une information, une question à nous poser ou vous
+                            souhaitez juste nous laisser un petit mot doux ? Pas de problème, on se lève au chant du coq
+                            pour traiter au plus vite votre demande !</p>
                     </div>
                 </div>
                 <div class="col-lg-5 d-none d-lg-block">
@@ -65,6 +67,7 @@
                         {{ form_widget(form.content) }}
                     </div>
                 </div>
+                <div class="g-recaptcha" data-sitekey="6LdGt4UUAAAAALyHz7He-PedmSpvHqm6Rr6nF1_B"></div>
                 <div class="row d-flex justify-content-around">
                     <button type="submit">Envoyer</button>
                 </div>
@@ -72,4 +75,8 @@
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block javascripts %}
+    <script src='https://www.google.com/recaptcha/api.js'></script>
 {% endblock %}
