--- a/templates/references.html.twig
+++ b/templates/references.html.twig
@@ -68,9 +68,9 @@
                 <div class="col-lg-5 col-md-5 col-sm-7 col-10 no-padding shadow-sm p-0 mb-0 bg-white rounded white block-decal">
                     <img src="{{ asset('images/home/projet3.jpg') }}" class="img-fluid" alt="" height="180" width="100%">
                     <p>Refonte site</p>
-                    <h6>projet</h6>
-                    <p>Lorem lorem lorem lorem lorem lorem lorem</p>
-                    <a href="{{ 'project/' }}" class="link1">Voir le projet</a>
+                    <h6>Musée du Louvre</h6>
+                    <p>Permettre la réservation en ligne pour limiter vos files d'attente !</p>
+                    <a href="{{ 'project/project_louvre' }}" class="link1">Voir le projet</a>
                 </div>
 
             </div>
