--- a/templates/propos.html.twig
+++ b/templates/propos.html.twig
@@ -34,7 +34,7 @@
                 <h4>L'équipe</h4>
                 <div class="row space justify-content-left">
                     <div class="col-7 col-sm-7 col-md-7 col-lg-4 text-right pr-0">
-                        <img src="{{ asset('images/home-intro.jpg') }}" alt="Bootstrap" class="img-fluid ronde">
+                        <img src="{{ asset('images/equipe/delphine.jpg') }}" alt="Bootstrap" class="img-fluid ronde">
                     </div>
                     <div class="col-4">
                         <p>Delphine</p>
