--- a/public/CSS/base.css
+++ b/public/CSS/base.css
@@ -57,7 +57,7 @@ body {
 
 /* Blocks */
 
-.container-fluid{
+.container-fluid {
     padding-right: 0;
     padding-left: 0;
 }
@@ -66,7 +66,7 @@ body {
     margin-bottom: 8em;
 }
 
-.row{
+.row {
     margin-right: 0 !important;
     margin-left: 0 !important;
 }
@@ -109,14 +109,15 @@ body {
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
 }
 
-.block-decal:first-child  {
+.block-decal:first-child {
     margin: 0;
 }
 
-.block-decal:nth-child(2)  {
+.block-decal:nth-child(2) {
     margin: 0;
 }
-.block-decal{
+
+.block-decal {
     margin-top: 10%;
 }
 
@@ -126,6 +127,11 @@ body {
 
 .space {
     margin-top: 3.5em;
+}
+
+.g-recaptcha {
+    margin: 0 auto;
+    width: 304px;
 }
 
 /* Titles */
@@ -385,7 +391,7 @@ nav a {
 footer #link_blog a {
     text-decoration: none;
     color: #FFF;
-    margin:0 !important;
+    margin: 0 !important;
 }
 
 footer nav a:hover, .tel:hover, #link_blog a:hover {
@@ -435,13 +441,16 @@ footer > div {
     .block-decal:nth-child(2n) {
         margin-top: 10%;
     }
-    .title_article h1{
+
+    .title_article h1 {
         margin-top: 150px;
     }
-    .title_article h1, h2{
+
+    .title_article h1, h2 {
         font-size: 1.2em;
     }
-    .content-article img{
+
+    .content-article img {
         max-width: 100% !important;
         height: auto !important;
     }
@@ -546,6 +555,7 @@ footer > div {
         position: relative;
         bottom: 150px;
     }
+
     .title_article {
         position: relative;
         bottom: 500px;
