add picture on project Elektropop

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -145,7 +145,7 @@
                     <a href="{{ 'project/project_liberer-delivrer-hypnose' }}" class="link1">Voir le projet</a>
                 </div>
                 <div class="col-lg-4 no-padding shadow-sm p-0 mb-0 bg-white rounded white d-none d-lg-block">
-                    <img src="{{ asset('images/home/projet2.jpg') }}" class="img-fluid" alt="">
+                    <img src="{{ asset('images/home/elektropop.jpg') }}" class="img-fluid" alt="">
                     <p>Création site</p>
                     <h6>Elektropop</h6>
                     <p>Pour sa première édition, le festival Elektropop voit grand !</p>
