--- a/templates/projects/project_elektropop.html.twig
+++ b/templates/projects/project_elektropop.html.twig
@@ -50,24 +50,23 @@
                     </div>
                 </div>
             </div>
-            <!-- Carousel -->
             <div id="myCarousel" class="carousel slide col-12 margin-auto d-lg-none d-flex justify-content-center" data-ride="carousel">
 
                 <!-- The slideshow -->
                 <div class="carousel-inner" style=" width:320px" >
                     <div class="carousel-item active">
                         <div class="col-12 no-padding shadow-sm p-0 mb-0 bg-white rounded white">
-                            <img src="{{ asset('images/article-fili-990.jpg') }}" class="img-fluid" alt="" height="180" width="320">
+                            <img src="{{ asset('images/projects/marc-clara/marc-clara_1.jpg') }}" class="img-fluid" alt="" height="180" width="320">
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="col-12 no-padding shadow-sm p-0 mb-0 bg-white rounded white">
-                            <img src="{{ asset('images/article-fili-990.jpg') }}" class="img-fluid" alt="" height="180" width="320">
+                            <img src="{{ asset('images/projects/marc-clara/marc-clara_2.jpg') }}" class="img-fluid" alt="" height="180" width="320">
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="col-12 no-padding shadow-sm p-0 mb-0 bg-white rounded white">
-                           <img src="{{ asset('images/article-fili-990.jpg') }}" class="img-fluid" alt="" height="180" width="320">
+                            <img src="{{ asset('images/projects/marc-clara/marc-clara_3.jpg') }}" class="img-fluid" alt="" height="180" width="320">
                         </div>
                     </div>
 
@@ -90,18 +89,17 @@
 
             <div class="d-none d-lg-inline-block mt-lg-5">
                 <h4>Galerie du projet</h4>
-                <div class="row d-flex justify-content-between">
-                    <div class="col-lg-4 p-0">
-                        <div class="col-12 mb-3 p-0">
-                           <img src="{{ asset('images/article-fili-990.jpg') }}" class="img-fluid" alt="">
-                        </div>
-                        <div class="col-12 p-0">
-                            <img src="{{ asset('images/article-fili-990.jpg') }}" class="img-fluid" alt="">
-                        </div>
+                <div class="row d-flex justify-content-center">
+                    <div class="col-2 mb-3 p-0">
+                        <img src="{{ asset('images/projects/elektropop/elektropop_2.jpg') }}" class="img-fluid" alt="">
                     </div>
-                    <div class="col-lg-8">
-                        <img src="{{ asset('images/article-fili-990.jpg') }}" class="img-fluid" alt="">
+                    <div class="col-lg-6">
+                        <img src="{{ asset('images/projects/elektropop/elektropop_1.jpg') }}" class="img-fluid" alt="">
                     </div>
+                    <div class="col-2 p-0">
+                        <img src="{{ asset('images/projects/elektropop/elektropop_3.jpg') }}" class="img-fluid" alt="">
+                    </div>
+
                 </div>
             </div>
         </div>
