--- a/templates/references.html.twig
+++ b/templates/references.html.twig
@@ -45,7 +45,7 @@
                     <a href="{{ 'project/project_liberer-delivrer-hypnose' }}" class="link1">Voir le projet</a>
                 </div>
                 <div class="col-lg-5 col-md-5 col-sm-7 col-10 no-padding shadow-sm p-0 mb-0 bg-white rounded white block-decal">
-                    <img src="{{ asset('images/home/projet2.jpg') }}" class="img-fluid" alt="" height="180" width="100%">
+                    <img src="{{ asset('images/home/elektropop.jpg') }}" class="img-fluid" alt="" height="180" width="100%">
                     <p>Création site</p>
                     <h6>Elektropop</h6>
                     <p>Pour sa première édition, le festival Elektropop voit grand !</p>
