delete lorem on project lenormant

--- a/templates/projects/project_lenormant.html.twig
+++ b/templates/projects/project_lenormant.html.twig
@@ -31,13 +31,23 @@
                 <div class="col-12 col-lg-6 mt-5 mt-lg-0">
                     <div class="col-12 text-justify">
                         <h4>Livrables et autres</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
+                        <p class="envaleur">
+                            Création d'un site vitrine offrant les possibilités suivantes :
+                        </p>
+                        <ul class="envaleur">
+                            <li>Rédiger et diffuser en toute autonomie des articles de blog</li>
+                            <li>Page de contact</li>
+                            <li>Lien vers les réseaux sociaux</li>
+                            <li>Une page d'actualités</li>
+                        </ul>
                     </div>
                     <div class="col-12 mt-5 text-justify">
                         <h4>Objectif du projet</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
+                        <p>
+                            Le groupe lenormant souhaitait promouvoir l'ensemble des structures (raisons sociales différentes) sur un même site.
+                            Pour cela nous avons récupéré l'identité du groupe tout en gardant un aspect neutre pour représenter toutes les sociétés.</br>
+                            Via ce site, ils peuvent désormait présenter l'ensemble du groupe et de leurs activités !
+                        </p>
                     </div>
                 </div>
             </div>
