change name on elektropop

--- a/templates/projects/project_elektropop.html.twig
+++ b/templates/projects/project_elektropop.html.twig
@@ -27,7 +27,7 @@
                         <img src="{{ asset('images/equipe/noemie.jpg') }}" alt="Bootstrap" class="img-fluid ronde">
                     </div>
                     <div class="d-inline-block p-2">
-                        <p>Noémi</p>
+                        <p>Noémie</p>
                         <p>UX / UI Designer</p>
                     </div>
                 </div>
